# -empty-

./: .gitignore  CMakeLists.txt  README_INSTALLATION.txt  make_transparent.py  test_model.cpp  test_mp3.cpp  test_onnx.py  test_onnx_real.py  test_wav_writer.cpp
.github/workflows/: build-windows.yml
Resources/: htdemucs.onnx
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
